refactor: minor changes
Remove lambok dependency
Change order of class methods and have getters at the end
Reformat code and imports
Remove not-so-useful utils function
Re-write findRestaurantsByType using stream
Fix some names
Use assertTrue/False